--- a/addon/templates/components/editor-plugins/properties-card.hbs
+++ b/addon/templates/components/editor-plugins/properties-card.hbs
@@ -1,7 +1,7 @@
 {{#if getAvailibleProperties.isRunning}}
   <div class="loader"><span class="u-visually-hidden">Aan het laden</span></div>
 {{else}}
-  {{#if classes.length}}
+  {{#if results.length}}
     <!-- <div class="modal-dialog modal-dialog--static modal-dialog--small modal-dialog--sectioned"> -->
     <div class="modal-dialog__header">
       <div class="grid">
@@ -16,12 +16,12 @@
       </div>
     </div>
     <div class="modal-dialog__content modal-dialog__content--collapse">
-      {{#each classes as |result|}}
-        <h3>{{result.attributes.label}}</h3>
+      {{#each results as |result|}}
+        <h3>{{result.label}}</h3>
         <a href="#" onClick={{action "create" result}}>aanmaken</a>
-        {{#if result.relationships.range.data}}
+        {{#unless result.range.isPrimitive}}
           <a href="#" onClick={{action "search"}}>zoeken</a>
-        {{/if}}
+        {{/unless}}
       {{/each}}
     </div>
   {{else}}
