some updates on gui

--- a/addon/templates/components/editor-plugins/classes-card.hbs
+++ b/addon/templates/components/editor-plugins/classes-card.hbs
@@ -19,7 +19,9 @@
         {{#each results as |result|}}
             <h3>{{result.label}}</h3>
             <a href="#" onClick={{action "create" result}}>aanmaken</a>
-            <a href="#" onClick={{action "search"}}>zoeken</a>
+            {{#unless result.isPrimitive}}
+              <a href="#" onClick={{action "search" result}}>zoeken</a>
+            {{/unless}}
         {{/each}}
     </div>
   {{else}}
